syntax = "proto3";

package users.proto;

option go_package = "github.com/Posrabi/flashy/protos/users";
option java_package = "com.flashy";
option java_outer_classname = "UsersProto";

service UsersAPI {

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
  }

  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
  }

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
  }

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
  }

  rpc LogIn(LogInRequest) returns (LogInResponse) {
  }

  rpc LogOut(LogOutRequest) returns (LogOutResponse) {
  }

  rpc CreatePhrase(CreatePhraseRequest) returns (CreatePhraseResponse) {
  }

  rpc GetPhrases(GetPhrasesRequest) returns (GetPhrasesResponse) {
  }

  rpc DeletePhrase(DeletePhraseRequest) returns (DeletePhraseResponse) {
  }

}

message User {
  string user_name = 1;
  string hash_password = 2;
  string name = 3;
  string email = 4;
  string auth_token = 5;
  string user_id = 6;
}

message Phrase {
  string user_id = 1;
  string word = 2;
  string sentence = 3;
  int64 phrase_time = 4;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  string response = 1;
}

message DeleteUserRequest {
  string user_id = 1;
  string hash_password = 2;
}

message DeleteUserResponse {
  string response = 1;
}

message LogInRequest {
  string user_name = 1;
  string hash_password = 2;
}

message LogInResponse {
  User user = 1;
}

message LogOutRequest {
  string user_id = 2;
}

message LogOutResponse {
  string response = 1;
}

message CreatePhraseRequest {
  Phrase phrase = 1;
}

message CreatePhraseResponse {
  string response = 1;
}

message GetPhrasesRequest {
  string user_id = 1;
  int64 start = 2;
  int64 end = 3;
}

message GetPhrasesResponse {
  repeated Phrase phrases = 1;
}

message DeletePhraseRequest {
  string user_id = 1;
  int64 phrase_time = 2;
}

message DeletePhraseResponse {
  string response = 1;
}
